<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="add_video_game">Add Video Game</string>
    <string name="add_video_game_error">Video game not added</string>
    <string name="add_video_game_success">Video game added</string>
    <string name="app_credit">© 2024 Jonathan Carrière. All rights reserved.</string>
    <string name="app_name">PlayList</string>
    <string name="arrow_description">Arrow allowing to navigate back to the previous screen</string>
    <string name="ascending">Ascending</string>
    <string name="backlog">Backlog</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_form_submission_text">Are you certain you want to cancel the form\'s submission?</string>
    <string name="cancel_form_submission_title">Cancel Form Submission</string>
    <string name="category_selection"><sup>*</sup>Select at least one category</string>
    <string name="clear_description">Icon allowing to clear the associated field</string>
    <string name="collection">Collection</string>
    <string name="completion">Completion</string>
    <string name="completion_date">Completion Date</string>
    <string name="completion_date_underline"><u>Completion Date</u></string>
    <string name="completion_date_no">No Completion Date</string>
    <string name="completion_date_validation"><sup>*</sup>Completion date cannot be before release date</string>
    <string name="confirm">Confirm</string>
    <string name="cover_art">Cover Art</string>
    <string name="cover_art_description">Cover art of a video game</string>
    <string name="data"><u>Data</u></string>
    <string name="descending">Descending</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All Video Game Data</string>
    <string name="delete_message">Are you certain you want to delete this video game?</string>
    <string name="delete_message_all">Are you certain you want to delete all video game data?</string>
    <string name="delete_message_final">This video game will be deleted if removed from this category.</string>
    <string name="delete_video_game_error">Video game not deleted</string>
    <string name="delete_video_game_error_all">All video game data not deleted</string>
    <string name="delete_video_game_error_no_data">No video game data to delete</string>
    <string name="delete_video_game_success">Video game deleted</string>
    <string name="delete_video_game_success_all">All video game data deleted</string>
    <string name="details_video_game">Video Game Details</string>
    <string name="edit">Edit</string>
    <string name="edit_video_game">Edit Video Game</string>
    <string name="error_gallery">Gallery not accessible</string>
    <string name="form_validation_error">Errors detected in form</string>
    <string name="free">Free</string>
    <string name="home_screen">Home</string>
    <string name="hour">Hour</string>
    <string name="hours">Hours</string>
    <string name="image_video_game">An image of a video game\'s cover art</string>
    <string name="images"><u>Images</u></string>
    <string name="images_switch">Enable display of video game cover art?</string>
    <string name="more_actions">More Actions</string>
    <string name="no_games_found">No Results Found</string>
    <string name="optional">(Optional)</string>
    <string name="order">Order</string>
    <string name="permissions_denied_gallery">Permission to access gallery denied</string>
    <string name="platform">Platform</string>
    <string name="platform_underline"><u>Platform</u></string>
    <string name="playtime">Playtime</string>
    <string name="playtime_underline"><u>Playtime</u></string>
    <string name="playtime_no">No Playtime</string>
    <string name="playtime_validation"><sup>*</sup>Playtime cannot exceed 10,000 hours</string>
    <string name="price">Price</string>
    <string name="price_underline"><u>Price</u></string>
    <string name="price_validation_amount"><sup>*</sup>Price cannot exceed $10,000</string>
    <string name="invalid_price_format"><sup>*</sup>Use up to 5 digits and 2 decimals (e.g., 10,000 or 10,000.00)</string>
    <string name="publisher">Publisher</string>
    <string name="publisher_underline"><u>Publisher</u></string>
    <string name="release_date">Release Date</string>
    <string name="release_date_underline"><u>Release Date</u></string>
    <string name="remove_backlog">Remove from Backlog</string>
    <string name="remove_backlog_error">Video game not removed from backlog</string>
    <string name="remove_backlog_success">Video game removed from backlog</string>
    <string name="remove_collection">Remove from Collection</string>
    <string name="remove_collection_error">Video game not removed from collection</string>
    <string name="remove_collection_success">Video game removed from collection</string>
    <string name="remove_completion">Remove from Completion</string>
    <string name="remove_completion_error">Video game not removed from completion</string>
    <string name="remove_completion_success">Video game removed from completion</string>
    <string name="remove_wishlist">Remove from Wishlist</string>
    <string name="remove_wishlist_error">Video game not removed from wishlist</string>
    <string name="remove_wishlist_success">Video game removed from wishlist</string>
    <string name="required_field"><sup>*</sup>This field is required</string>
    <string name="save">Save</string>
    <string name="save_backlog">Save to Backlog</string>
    <string name="save_backlog_error">Video game not saved to backlog</string>
    <string name="save_backlog_success">Video game saved to backlog</string>
    <string name="save_collection">Save to Collection</string>
    <string name="save_collection_error">Video game not saved to collection</string>
    <string name="save_collection_success">Video game saved to collection</string>
    <string name="save_completion">Save to Completion</string>
    <string name="save_completion_error">Video game not saved to completion</string>
    <string name="save_completion_success">Video game saved to completion</string>
    <string name="save_to">Save To</string>
    <string name="saved_to"><u>Saved To</u></string>
    <string name="save_wishlist">Save to Wishlist</string>
    <string name="save_wishlist_error">Video game not saved to wishlist</string>
    <string name="save_wishlist_success">Video game saved to wishlist</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="settings_updated">Settings updated</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_options_updated">Sorting options updated</string>
    <string name="title">Title</string>
    <string name="update_video_game_error">Video game not edited</string>
    <string name="update_video_game_success">Video game edited</string>
    <string name="verification"><u>Verification</u></string>
    <string name="verification_switch">Ask for confirmation when deleting video games?</string>
    <string name="wishlist">Wishlist</string>
</resources>