<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:focusable="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabTextAppearance="@style/CustomTabItemTextAppearance"
        app:tabTextColor="@color/white"
        app:tabSelectedTextColor="@color/white"
        app:tabIndicatorColor="@color/white">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItemBacklog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backlog" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItemCollection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collection" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItemCompletion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completion" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItemWishlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wishlist" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:focusable="false"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonAddVideoGame"
        android:backgroundTint="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/add_video_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_add_24"/>

</androidx.constraintlayout.widget.ConstraintLayout>