<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:focusable="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <ScrollView
        android:focusable="false"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="3"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.90" />

            <ImageView
                android:id="@+id/imageViewGameCover"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/cover_art_description"
                android:maxWidth="300dp"
                android:maxHeight="300dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
                app:layout_constraintWidth_percent="0.66"
                app:srcCompat="@drawable/baseline_image_24" />

            <TextView
                android:id="@+id/textViewPlatformLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/platform_underline"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewGameCover"
                app:layout_constraintWidth_percent="0.66" />

            <TextView
                android:id="@+id/textViewPlatform"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPlatformLabel"
                app:layout_constraintWidth_percent="0.66" />

            <TextView
                android:id="@+id/textViewPriceLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/price_underline"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPlatform"
                app:layout_constraintWidth_percent="0.66" />

            <TextView
                android:id="@+id/textViewPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPriceLabel"
                app:layout_constraintWidth_percent="0.66" />

            <TextView
                android:id="@+id/textViewPublisherLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/publisher_underline"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPrice"
                app:layout_constraintWidth_percent="0.66" />

            <TextView
                android:id="@+id/textViewPublisher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPublisherLabel"
                app:layout_constraintWidth_percent="0.66" />

            <TextView
                android:id="@+id/textViewReleaseDateLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/release_date_underline"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPublisher"
                app:layout_constraintWidth_percent="0.66" />

            <TextView
                android:id="@+id/textViewReleaseDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewReleaseDateLabel"
                app:layout_constraintWidth_percent="0.66" />

            <TextView
                android:id="@+id/textViewCompletionDateLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/completion_date_underline"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewReleaseDate"
                app:layout_constraintWidth_percent="0.66" />

            <TextView
                android:id="@+id/textViewCompletionDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCompletionDateLabel"
                app:layout_constraintWidth_percent="0.66" />

            <TextView
                android:id="@+id/textViewPlaytimeLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/playtime_underline"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCompletionDate"
                app:layout_constraintWidth_percent="0.66" />

            <TextView
                android:id="@+id/textViewPlaytime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPlaytimeLabel"
                app:layout_constraintWidth_percent="0.66" />

            <TextView
                android:id="@+id/textViewSavedToLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/saved_to"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPlaytime"
                app:layout_constraintWidth_percent="0.66" />

            <LinearLayout
                android:id="@+id/linearLayoutBacklogCollection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewSavedToLabel"
                app:layout_constraintWidth_percent="0.66">

                <CheckBox
                    android:id="@+id/checkBoxBacklog"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@string/backlog"
                    android:textColor="@color/white"
                    tools:ignore="VisualLintButtonSize" />

                <CheckBox
                    android:id="@+id/checkBoxCollection"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@string/collection"
                    android:textColor="@color/white"
                    tools:ignore="VisualLintButtonSize" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutCompletionWishlist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutBacklogCollection"
                app:layout_constraintWidth_percent="0.66">

                <CheckBox
                    android:id="@+id/checkBoxCompletion"
                    android:buttonTint="@color/white"
                    android:clickable="false"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:text="@string/completion"
                    android:textColor="@color/white"
                    tools:ignore="VisualLintButtonSize" />

                <CheckBox
                    android:id="@+id/checkBoxWishlist"
                    android:buttonTint="@color/white"
                    android:clickable="false"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:text="@string/wishlist"
                    android:textColor="@color/white"
                    tools:ignore="VisualLintButtonSize" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>